--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: "Poppins", sans-serif;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+body::-webkit-scrollbar {
+  width: 7px;
+  margin: 2% 0%;
+  z-index: 100;
+}
+
+body::-webkit-scrollbar-track {
+  /* background-color: #000000; */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #737272e2;
+  width: 7px;
+  overflow: hidden;
+  transition: background-color 0.3s;
 }
