--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -3,7 +3,7 @@
 .card-container {
   display: flex;
   justify-content: space-between;
-  background-color: #000;
+  background-color: #2e3e6a;
   height: 89vh;
 }
 
@@ -14,11 +14,13 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 16px;
   margin: 10px;
-  background: linear-gradient(to bottom, #3c3c3c, #2980b9);
+  /* background: linear-gradient(to bottom, #3c3c3c, #2980b9); */
+  background-color: rgba(161, 161, 161, 0.7);
   color: white;
   font-family: "Arial", sans-serif;
   font-size: 16px;
   transition: transform 0.3s;
+  backdrop-filter: blur(5px);
 }
 
 .card h2 {
@@ -39,6 +41,8 @@
 .dropdown {
   text-align: center;
   margin-top: 20px;
+  border: 2px solid #000;
+  border-radius: 5px;
 }
 
 .dropdown select {
@@ -64,9 +68,9 @@
 }
 
 .card {
-  border: 2px solid #3498db;
+  border: solid #313131;
 }
 
 .card:hover {
-  border-color: #2980b9;
+  border-color: #000000;
 }
