--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -70,3 +70,34 @@
 .card:hover {
   border-color: #2980b9;
 }
+.input-field {
+  margin-bottom: 20px;
+  text-align: center; /* Center align its content */
+}
+
+.centered-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: none;
+}
+
+textarea {
+  height: 100px; /* Adjust the height as needed */
+  width: 400px; /* Set a fixed width */
+  resize: none; /* Prevent resizing */
+}
