--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -14,13 +14,13 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 16px;
   margin: 10px;
-  /* background: linear-gradient(to bottom, #3c3c3c, #2980b9); */
+  background: linear-gradient(to bottom, #4f5389, #6374a7);
   background-color: rgba(161, 161, 161, 0.7);
   color: white;
   font-family: "Arial", sans-serif;
   font-size: 16px;
   transition: transform 0.3s;
-  backdrop-filter: blur(5px);
+  /* backdrop-filter: blur(0px); */
 }
 
 .card h2 {
@@ -36,6 +36,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .dropdown {
@@ -68,11 +69,11 @@
 }
 
 .card {
-  border: solid #313131;
+  border: 2px solid #0000;
 }
 
 .card:hover {
-  border-color: #000000;
+  border-color: #0000003f;
 }
 .input-field {
   margin-bottom: 20px;
@@ -104,4 +105,13 @@ textarea {
   height: 100px; /* Adjust the height as needed */
   width: 400px; /* Set a fixed width */
   resize: none; /* Prevent resizing */
+}
+
+.transfer-icon {
+  position: absolute;
+  left: 42.2%;
+  color: #b4b3d9;
+  z-index: 100 !important;
+  font-size: 15rem;
+  top: 34%;
 }
