--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,7 @@
 /* Navbar.css */
 
 .navbar {
-  background-color: #3f579c; /* Background color for the navbar */
+  background-color: #2e3e6a; /* Background color for the navbar */
   color: #fff; /* Text color for the navbar items */
   padding: 25px 30px; /* Add padding to space out the items */
   display: flex; /* Display the left and right sections in a row */
